# arx

./: .arxproject.toml  .gitignore  .makim.yaml  .pre-commit-config.yaml  .releaserc.json  404.html  AGENTS.md  README.md  changelog.html  coc.html  contributing.html  discord.html  getting-started.html  governance.html  index.html  mkdocs.yaml  objects.inv  partners.html  pyproject.toml  roadmap.html  robots.txt  search.json  sitemap.xml  sponsor.html  syntax.html  tmp8gkgsgp3.makim  tmp9kpdio2g.makim  tmpk3ay7jtf.makim  tmpr6caojz7.makim
.github/workflows/: docs.yaml  main.yaml  release.yaml
api/: arx.html  astx.html  index.html  irx.html
api/SUMMARY/: index.html
api/arx/: builtins.html  cli.html  codegen.html  dataframe.html  docstrings.html  exceptions.html  index.html  io.html  lexer.html  logs.html  main.html  package_index.html  parser.html  schema.html  settings.html  tensor.html  testing.html
api/astx/: array.html  base.html  binary_op.html  blocks.html  buffer.html  callables.html  classes.html  classes_ext.html  collections.html  comprehensions.html  context.html  context_manager.html  data.html  dataframe.html  exceptions.html  ffi.html  flows.html  index.html  iterables.html  literals.html  mixes.html  modifiers.html  modules.html  operators.html  packages.html  structs.html  subscript.html  symbol_table.html  system.html  templates.html  tensor.html  tools.html  types.html  viz.html
api/builtins/: index.html
api/cli/: index.html
api/codegen/: index.html
api/docstrings/: index.html
api/exceptions/: index.html
api/io/: index.html
api/irx/: analysis.html  base.html  buffer.html  builder.html  builtins.html  diagnostics.html  index.html  symbol_table.html  system.html  typecheck.html
api/lexer/: index.html
api/logs/: index.html
api/main/: index.html
api/parser/: index.html
api/schema/: index.html
api/semantic/: index.html
api/settings/: index.html
astx/: changelog.html  contributing.html  conventions.html  index.html  installation.html
changelog/: index.html
coc/: index.html
contributing/: index.html
discord/: index.html
docs/: _quarto.yml  changelog.md  contributing.md  getting-started.md  governance.md  index.md  roadmap.md  syntax.md
examples/: average.x  classes.x  constant.x  dataframe.x  fibonacci.x  imports.x  irx-feature-proposal.x  ndarray.x  print-star.x  sum.x  templates.x  tensor.x  type-aliases.x
getting-started/: index.html
governance/: index.html
irx/: architecture.html  buffer-view-model.html  changelog.html  class-model.html  contributing.html  index.html  installation.html  runtime-features.html  semantic-contract.html
partners/: index.html
roadmap/: index.html
scripts/: build.sh  gen_api_docs.py  gen_ref_nav.py  publish.sh
search/: search_index.json
sponsor/: index.html
syntax/: SYNTAX.md  arx.syntax.json  index.html
tests/: __init__.py  test_app_paths.py  test_codegen_ast_output.py  test_codegen_file_object.py  test_io.py  test_lexer.py  test_logs.py  test_ndarray.py  test_parser.py  test_parser_branches.py  test_parser_classes.py  test_parser_templates.py  test_settings.py  test_stdlib.py  test_testing.py
(+470 files in other folders)
