[project]
name = "arx-dev"
version = "1.22.0"  # semantic-release
description = "Arx metapackage for development of Arx, IRx, and ASTx."
readme = "docs/index.md"
authors = [
  {name = "Ivan Ogasawara", email = "ivan.ogasawara@gmail.com"}
]
license = "Apache-2.0"
requires-python = ">=3.10,<4"
dynamic = ["dependencies"]

[tool.poetry]
exclude = [
  ".git/*",
  ".env*",
]
package-mode = false

[tool.poetry.dependencies]
arxlang = { path = "packages/arx/", develop = true }
pyirx = { path = "packages/irx/", develop = true }
astx = { path = "packages/astx/", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.2"
pytest-cov = ">=4.1.0"
pytest-xdist = ">=3.8.0"
coverage = ">=7.2.7"
pre-commit = ">=3.3.2"
ruff = ">=0.9.5"
mypy = ">=1.6.0"
bandit = ">=1.7.5"
vulture = ">=2.9.1"
mccabe = ">=0.6.1"
ipykernel = ">=6.0.0"
ipython = ">=7.0.0"
mkdocs = ">=1.3,<2"
mkdocs-exclude = ">=1.0.2"
mkdocs-jupyter = ">=0.24.7"
mkdocs-literate-nav = ">=0.4.1"
mkdocs-macros-plugin = ">=0.6.3"
mkdocs-material = ">=8"
mkdocstrings = {version=">=0.19.0", extras=["python"]}
mkdocstrings-python = "<2"
mkdocs-gen-files = ">=0.5.0"
jupyterlab = ">=4.0.7"
makim = "1.27.0"
nbmake = ">=1.5.3"
types-requests = ">=2.31.0.20240406"
douki = ">=0.12.1"

[build-system]
requires = ["poetry-core>=2"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "packages/arx/tests/python",
    "packages/astx/tests",
    "packages/irx/tests",
]
filterwarnings = [
    "error::RuntimeWarning",
    "error::typeguard.TypeHintWarning",
]

[tool.bandit]
exclude_dirs = ["tests"]
targets = "./"

[tool.vulture]
exclude = ["tests"]
ignore_decorators = ["@abc.abstractmethod"]
ignore_names = []
make_whitelist = true
min_confidence = 80
paths = ["./"]
sort_by_size = true
verbose = false

[tool.ruff]
target-version = "py310"
line-length = 79
force-exclude = true
src = [
  "packages/arx/src",
  "packages/astx/src",
  "packages/irx/src",
]
exclude = [
  'docs',
  'packages/*/dist',
]
fix = true

[tool.ruff.lint]
ignore = [
  "F811",
  "PLR0911",  # Too many return statements
  "PLR0912",  # Too many branches
  "PLR0913",
  "PLC0415",  # `import` should be at the top-level of a file
]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "YTT", # flake8-2020
  "PL",  # PL
  "RUF", # Ruff-specific rules
  "I001", # isort
]
extend-select = [
  "UP006",  # Prefer builtin generics in annotations
  "UP007",  # Prefer | syntax for unions and optionals
]

[tool.ruff.lint.per-file-ignores]
"packages/astx/src/astx/base.py" = [
  "UP006",
  "UP007",
]

[tool.ruff.lint.isort]
# Use a single line between direct and from import
lines-between-types = 1

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = ["scripts/"]

[[tool.mypy.overrides]]
module = [
  "yaml",
]
ignore_missing_imports = true
